--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -9876,6 +9876,18 @@ table {
     text-transform:uppercase
 }
 
+.toctree-wrapper.compound > .current > li.toctree-l1:first-of-type a {
+    font-family: titillium-regular,arial,sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    color: #474747;
+    display: block;
+    font-size: 16px;
+    padding: .4em .5em;
+    text-decoration: none;
+    text-transform: none;
+}
+
 
 
 .current > ul li a, ul li a {
@@ -11102,7 +11114,7 @@ hr {
 }
 
 .site-header .header-headline {
-    background-image: url(/_static/img/headline-cover.jpg);
+    background-image: url(https://80f9b8fec919ac5ebc1a-384085a95109bffb325fe35cb6202ded.ssl.cf2.rackcdn.com/fpo-code-editor-d451e1cbed5e243327c02753222aff6516c860bb1892e03d3c54d9b1e1884d66.jpg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11357,6 +11369,11 @@ ul.current>li.toctree-l1:first-of-type a, ul.current>li.toctree-l1:first-of-type
 ul.current li a.current {
     background: rgba(52,152,219,.2);
     box-shadow: inset 3px 0 0 0 #3498db;
+}
+
+.toctree-wrapper.compound > ul.current li a.current {
+    background: transparent;
+    box-shadow: inset 0px 0 0 0 #FFFFFF;
 }
 
 ul.current li a {
@@ -11920,107 +11937,3 @@ body {
 .btn-white {
     background-color: transparent !important;
 }
-
-.sidebar-container .collapse-target {
-    cursor: pointer;
-    display: inline-block;
-    height: 12px;
-    left: -12px;
-    position: absolute;
-    text-align: center;
-    top: 12px;
-    width: 12px;
-}
-
-.fa-caret-right::before {
-    content: "\f0da";
-}
-
-.sidebar-container {
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 15px 15px 0 15px;
-}
-
-.sidebar-container::-webkit-scrollbar {
-    background: transparent;
-    height: 4px;
-    width: 4px;
-}
-
-.sidebar-container::-webkit-scrollbar-track:vertical {
-    background: transparent;
-}
-
-.sidebar-container::-webkit-scrollbar-thumb:vertical {
-    background: fadeout(#000000, 75%);
-    border-radius: 1px;
-}
-
-.github-link {
-        border-bottom: solid 1px shade(white, 18%);
-        display: block;
-        margin-bottom: 20px;
-        padding-bottom: 20px;
-        text-align: center;
-        transform: transition(#000000 0.1s ease-in-out);
-}
-.github-link .icon {
-    display: block;
-    font-size: 36px;
-    margin-right: 8px;
-    text-align: center;
-    transform: transition(#000000 .1s ease-in-out);
-}
-
-.github-link .link-text {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-        .link-text:hover,
-        .link-text:hover .icon {
-            color: #000000;
-        }
-
-        @media (min-width: 1150px) {
-
-            .icon {
-                display: inline-block;
-                font-size: 26px;
-                text-align: left;
-            }
-        }
-
-   .toctree-wrapper > ul {
-        list-style-type: none;
-        margin: 0;
-        overflow: hidden;
-        padding: 0;
-        padding-left: 20px;
-        width: 100%;
-   }
-
-
-    .collapse-target {
-        cursor: pointer;
-        display: inline-block;
-        height: 12px;
-        left: -12px;
-        position: absolute;
-        text-align: center;
-        top: 12px;
-        width: 12px;
-    }
-    .layout.sidebar-left .sidebar {
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        display: inline-block;
-        margin-right: -.26rem;
-        margin-left: 0;
-        vertical-align: top;
-    }
-
-    .sidebar-container li.open > .collapse-target {
-        transform: rotate(90deg);
-    }
