--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -11114,7 +11114,7 @@ hr {
 }
 
 .site-header .header-headline {
-    background-image: url(/img/headline-cover.jpg);
+    background-image: url(/_static/img/headline-cover.jpg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
