--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -11938,9 +11938,19 @@ body {
     background-color: transparent !important;
 }
 
-.sidebar-container .toctree-wrapper > ul > li.toctree-l1:first-of-type a, .sidebar-container > ul > li.toctree-l1:first-of-type a {
-    font-family: titillium-bold,arial,sans-serif;
+.wy-side-scroll .wy-menu > ul > li.toctree-l1:first-of-type a, .wy-menu > ul > li.toctree-l1:first-of-type a {
+    font-family: titillium-bold,arial,sans-serif;Ω
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
+}
+.wy-side-scroll .wy-menu > ul li a, .wy-menu > ul li a {
+    font-family: titillium-regular,arial,sans-serif;Ω
+    font-style: normal;
+    font-weight: 400;
+    color: #474747;
+    display: block;
+    font-size: 16px;
+    padding: .4em .5em;
+    text-decoration: none;
 }
