--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -11347,7 +11347,7 @@ hr {
 }
 
 
-ul.current {
+ul {
     list-style-type: none;
     margin: 0;
     overflow: hidden;
@@ -11355,28 +11355,28 @@ ul.current {
     width: 100%;
 }
 
-ul.current li {
+ul li {
     margin: 0;
 }
 
-ul.current>li.toctree-l1:first-of-type a, ul.current>li.toctree-l1:first-of-type a {
+ul >li.toctree-l1:first-of-type a, ul >li.toctree-l1:first-of-type a {
     font-family: 'titillium-bold',arial,sans-serif;
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
 }
 
-ul.current li a.current {
+ul li a.current {
     background: rgba(52,152,219,.2);
     box-shadow: inset 3px 0 0 0 #3498db;
 }
 
-.toctree-wrapper.compound > ul.current li a.current {
+.toctree-wrapper.compound > ul li a.current {
     background: transparent;
     box-shadow: inset 0px 0 0 0 #FFFFFF;
 }
 
-ul.current li a {
+ul li a {
     font-family: 'titillium-regular',arial,sans-serif;
     font-style: normal;
     font-weight: 400;
