--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -11939,13 +11939,13 @@ body {
 }
 
 .wy-side-scroll .wy-menu > ul > li.toctree-l1:first-of-type a, .wy-menu > ul > li.toctree-l1:first-of-type a {
-    font-family: titillium-bold,arial,sans-serif;Ω
+    font-family: titillium-bold,arial,sans-serif;
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
 }
 .wy-side-scroll .wy-menu > ul li a, .wy-menu > ul li a {
-    font-family: titillium-regular,arial,sans-serif;Ω
+    font-family: titillium-regular,arial,sans-serif;
     font-style: normal;
     font-weight: 400;
     color: #474747;
