CSS and layout Fixes

--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -5251,10 +5251,12 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
 }
 .rst-footer-buttons .prev {
     text-align: left;
+    margin-left: 2rem;
 }
 
 .rst-footer-buttons .next {
     text-align: right;
+    margin-right: 2rem;
 }
 
 .rst-footer-buttons .prev, .rst-footer-buttons .next {
