CSS and layout Fixes

--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -5252,11 +5252,13 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
 .rst-footer-buttons .prev {
     text-align: left;
     margin-left: 2rem;
+    left: 0;
 }
 
 .rst-footer-buttons .next {
     text-align: right;
     margin-right: 2rem;
+    right: 0;
 }
 
 .rst-footer-buttons .prev, .rst-footer-buttons .next {
@@ -5271,6 +5273,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
     -moz-box-sizing: border-box;
     vertical-align: top;
     margin-bottom: 1.5em;
+    position: absolute;
 }
 
 .rst-footer-buttons .label {
