--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -9884,6 +9884,7 @@ table {
     font-family: titillium-regular, arial, sans-serif;
     font-style: normal;
     font-weight: 400;
+    color: #474747;
     display: block;
     font-size: 16px;
     padding: .4em .5em;
