--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -9880,18 +9880,7 @@ table {
 
 
 
-.current > ul li a {
-    font-family: titillium-regular, arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    color: #474747;
-    display: block;
-    font-size: 16px;
-    padding: .4em .5em;
-    text-decoration:none
-}
-
-ul li a {
+.current > ul li a, ul li a {
     font-family: titillium-regular, arial, sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -9900,7 +9889,6 @@ ul li a {
     padding: .4em .5em;
     text-decoration:none
 }
-
 
 @media (min-width: 769px) {
     .sidebar-container.sticky {
@@ -11379,6 +11367,7 @@ ul li a {
     font-family: 'titillium-regular',arial,sans-serif;
     font-style: normal;
     font-weight: 400;
+    color: #474747;
     display: block;
     font-size: 16px;
     padding: .4em .5em;
@@ -11946,6 +11935,7 @@ body {
     font-family: titillium-regular,arial,sans-serif;
     font-style: normal;
     font-weight: 400;
+    color: #474747;
     display: block;
     font-size: 16px;
     padding: .4em .5em;
@@ -12132,7 +12122,7 @@ table {
 .admonition:before,
 .fa,
 .fa-stack {
- display: flex
+ display:flex
 }
 @font-face {
  font-family:open-sans-light;
@@ -15110,6 +15100,7 @@ a.cta {
  font-family:titillium-regular,arial,sans-serif;
  font-style:normal;
  font-weight:400;
+ color:#474747;
  display:block;
  font-size:16px;
  padding:.4em .5em;
