--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -16815,7 +16815,7 @@ body.docs-home .docs-content {
  width:calc(100% - 0px);
  padding:0 5%
 }
-@media (min-width:769px) {
+@media (min-width:769px) and (max-width: 1023px) {
  body.docs-home .docs-content {
   box-sizing:border-box;
   -moz-box-sizing:border-box;
