--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -9841,7 +9841,7 @@ table {
 }
 
 
-.current > ul > li.toctree-l1:first-of-type > a, ul > li.toctree-l1:first-of-type > a {
+ul.current > li.toctree-l1:first-of-type > address {
     font-family: titillium-bold, arial, sans-serif;
     font-style: normal;
     font-weight: 400;
