--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -18592,14 +18592,12 @@ ul.simple {
 }
 
 .wy-side-scroll {
-    position: -webkit-sticky;
-    background-color: red;
-    position: sticky;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
     top: 0;
-}
-
-.wy-side-scroll:before,
-.wy-side-scroll:after {
-    content: '';
-    display: table;
+    left: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
 }
