--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -11288,14 +11288,9 @@ hr {
   }
 
 
-@media screen and (min-width: 1025px) {
-    .wy-side-scroll {
-        padding: 15px 20px 0;
-    }
-}
 
 .wy-side-scroll {
-    padding: 15px 15px 0;
+    padding-top: 15px;
 }
 
 
