--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -1794,9 +1794,9 @@ big, small {
     content: ""
 }
 
-.fa-minus-square-o:before, .wy-menu-vertical li.on a span.toctree-expand:before {
+/* .fa-minus-square-o:before, .wy-menu-vertical li.on a span.toctree-expand:before {
     content: "\f0da";
-}
+} */
 
 .wy-menu-vertical li.current > a span.toctree-expand:before {
     transform: rotate(90deg);
@@ -2093,10 +2093,10 @@ big, small {
 .fa-turkish-lira:before, .fa-try:before {
     content: ""
 }
-
+/* 
 .fa-plus-square-o:before, .wy-menu-vertical li span.toctree-expand:before {
     content: "\f0da";
-}
+} */
 
 .fa-space-shuttle:before {
     content: ""
