--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -4979,7 +4979,7 @@ html {
     font-size:.9em
 }
 
-.wy-menu-vertical li.current ul {
+.wy-menu-vertical li.current > ul {
     display:block
 }
 
