--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -4985,23 +4985,27 @@ html {
     display:none;
 }
 li.toctree-l1.open > ul{
-    display: block !important;
+    display: block;
 }
 li.toctree-l2.open > ul {
-    display: block !important;
+    display: block;
 }
 li.toctree-l3.open > ul {
-    display: block !important;
+    display: block;
 }
 
 li.toctree-l1.current > ul{
-    display: block !important;
+    display: block;
 }
 li.toctree-l2.current > ul {
-    display: block !important;
+    display: block;
 }
 li.toctree-l3.current > ul {
-    display: block !important;
+    display: block;
+}
+
+li.current > .collapse-target {
+    transform: rotate(90deg);
 }
 
 .wy-menu-vertical li ul li a {
