--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -9861,7 +9861,7 @@ table {
 
 
 
-.current > ul li a, ul li a {
+.current > ul li a {
     font-family: titillium-regular, arial, sans-serif;
     font-style: normal;
     font-weight: 400;
