--- a/api-docs/_static/css/styles.css
+++ b/api-docs/_static/css/styles.css
@@ -20,6 +20,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 .highlight .gr { color: #FF0000 } /* Generic.Error */
 .highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
 .highlight .gi { color: #00A000 } /* Generic.Inserted */
+.highlight .go { color: #333333 } /* Generic.Output */
 .highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
@@ -9949,10 +9950,6 @@ img {
     color:inherit
 }
 
-.highlight {
-    background: #3b3f45;
-    color:#e0e0d7
-}
 
 .highlight .hll {
     background-color:#49483e
@@ -15176,10 +15173,6 @@ img {
  background-color:inherit;
  border:none;
  color:inherit
-}
-.highlight {
- background:#3b3f45;
- color:#e0e0d7
 }
 .highlight .hll {
  background-color:#49483e
